// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UpdateContactForm render should render an empty form with different action 1`] = `
<Dialog
  buttons={
    Object {
      "primary": Object {
        "name": "Ok",
        "onClick": [Function],
      },
      "secondary": Object {
        "name": "Cancel",
        "onClick": [Function],
      },
    }
  }
  headerClass="set_contact_field"
  title="Update Contact"
>
  <TypeList
    __className=""
    initialType={
      Object {
        "aliases": Array [
          "set_contact_name",
          "set_contact_language",
          "set_contact_channel",
        ],
        "component": [Function],
        "description": "Update the contact",
        "form": [Function],
        "name": "Update Contact",
        "type": "set_contact_field",
      }
    }
    onChange={[MockFunction]}
  />
  <p>
    Select what to update
  </p>
  <AssetSelector
    additionalOptions={
      Array [
        Object {
          "id": "name",
          "name": "Name",
          "type": "property",
        },
        Object {
          "id": "language",
          "name": "Language",
          "type": "property",
        },
        Object {
          "id": "channel",
          "name": "Channel",
          "type": "property",
        },
      ]
    }
    assets={
      Object {
        "items": Object {},
        "type": "field",
      }
    }
    createAssetFromInput={[Function]}
    createPrefix="Create Contact Field: "
    entry={
      Object {
        "value": Object {
          "id": "name",
          "name": "Name",
          "type": "property",
        },
      }
    }
    name="Contact Field"
    onAssetCreated={[Function]}
    onChange={[Function]}
    searchable={true}
    sortFunction={[Function]}
  />
  <div
    className="value"
  >
    <Connect(TextInputElement)
      autocomplete={true}
      entry={
        Object {
          "value": "",
        }
      }
      focus={true}
      name="Name"
      onChange={[Function]}
      onFieldFailures={[Function]}
      placeholder="Enter a new name for the contact"
    />
  </div>
</Dialog>
`;

exports[`UpdateContactForm render should render an empty form with no action 1`] = `
<Dialog
  buttons={
    Object {
      "primary": Object {
        "name": "Ok",
        "onClick": [Function],
      },
      "secondary": Object {
        "name": "Cancel",
        "onClick": [Function],
      },
    }
  }
  headerClass="set_contact_field"
  title="Update Contact"
>
  <TypeList
    __className=""
    initialType={
      Object {
        "aliases": Array [
          "set_contact_name",
          "set_contact_language",
          "set_contact_channel",
        ],
        "component": [Function],
        "description": "Update the contact",
        "form": [Function],
        "name": "Update Contact",
        "type": "set_contact_field",
      }
    }
    onChange={[MockFunction]}
  />
  <p>
    Select what to update
  </p>
  <AssetSelector
    additionalOptions={
      Array [
        Object {
          "id": "name",
          "name": "Name",
          "type": "property",
        },
        Object {
          "id": "language",
          "name": "Language",
          "type": "property",
        },
        Object {
          "id": "channel",
          "name": "Channel",
          "type": "property",
        },
      ]
    }
    assets={
      Object {
        "items": Object {},
        "type": "field",
      }
    }
    createAssetFromInput={[Function]}
    createPrefix="Create Contact Field: "
    entry={
      Object {
        "value": Object {
          "id": "name",
          "name": "Name",
          "type": "property",
        },
      }
    }
    name="Contact Field"
    onAssetCreated={[Function]}
    onChange={[Function]}
    searchable={true}
    sortFunction={[Function]}
  />
  <div
    className="value"
  >
    <Connect(TextInputElement)
      autocomplete={true}
      entry={
        Object {
          "value": "",
        }
      }
      focus={true}
      name="Name"
      onChange={[Function]}
      onFieldFailures={[Function]}
      placeholder="Enter a new name for the contact"
    />
  </div>
</Dialog>
`;

exports[`UpdateContactForm should allow switching from router to channel 1`] = `
Object {
  "channel": Object {
    "validationFailures": Array [],
    "value": Object {
      "id": "channel_id",
      "name": "Channel Name",
      "type": "channel",
    },
  },
  "field": Object {
    "value": Object {
      "id": "channel",
      "name": "Channel",
      "type": "property",
    },
  },
  "fieldValue": Object {
    "value": "",
  },
  "language": Object {
    "value": null,
  },
  "name": Object {
    "value": "",
  },
  "type": "set_contact_channel",
  "valid": true,
}
`;

exports[`UpdateContactForm should allow switching from router to channel 2`] = `
Array [
  Object {
    "channel": Object {
      "name": "Channel Name",
      "uuid": "channel_id",
    },
    "type": "set_contact_channel",
    "uuid": "e67ce051-f3e4-4c42-807b-e393df5fa382",
  },
  [Function],
]
`;

exports[`UpdateContactForm should allow switching from router to contact name 1`] = `
Array [
  Object {
    "name": "Rowan Seymour",
    "type": "set_contact_name",
    "uuid": "2dc85899-0577-4f1b-a620-f12094e34b5e",
  },
  [Function],
]
`;

exports[`UpdateContactForm should allow switching from router to field value 1`] = `
Object {
  "channel": Object {
    "value": null,
  },
  "field": Object {
    "value": Object {
      "id": "birthday",
      "name": "Birthday",
      "type": "field",
    },
  },
  "fieldValue": Object {
    "validationFailures": Array [],
    "value": "12/25/00",
  },
  "language": Object {
    "value": null,
  },
  "name": Object {
    "value": "",
  },
  "type": "set_contact_field",
  "valid": true,
}
`;

exports[`UpdateContactForm should allow switching from router to field value 2`] = `
Array [
  Object {
    "field": Object {
      "key": "birthday",
      "name": "Birthday",
    },
    "type": "set_contact_field",
    "uuid": "42ebf1d0-a43e-4ba6-9577-c863b20c88c4",
    "value": "12/25/00",
  },
  [Function],
]
`;

exports[`UpdateContactForm should allow switching from router to language 1`] = `
Object {
  "channel": Object {
    "value": null,
  },
  "field": Object {
    "value": Object {
      "id": "language",
      "name": "Language",
      "type": "property",
    },
  },
  "fieldValue": Object {
    "value": "",
  },
  "language": Object {
    "validationFailures": Array [],
    "value": "e",
  },
  "name": Object {
    "value": "",
  },
  "type": "set_contact_language",
  "valid": true,
}
`;

exports[`UpdateContactForm should allow switching from router to language 2`] = `
Array [
  Object {
    "language": undefined,
    "type": "set_contact_language",
    "uuid": "70ac6ea6-803a-4c33-81c7-dc26803c313f",
  },
  [Function],
]
`;

exports[`UpdateContactForm updates should update channel 1`] = `
Object {
  "channel": Object {
    "validationFailures": Array [],
    "value": Object {
      "id": "channel_id",
      "name": "Channel Name",
      "type": "channel",
    },
  },
  "field": Object {
    "value": Object {
      "id": "channel",
      "name": "Channel",
      "type": "property",
    },
  },
  "fieldValue": Object {
    "value": "25",
  },
  "language": Object {
    "value": null,
  },
  "name": Object {
    "value": "",
  },
  "type": "set_contact_channel",
  "valid": true,
}
`;

exports[`UpdateContactForm updates should update channel 2`] = `
Array [
  Object {
    "name": "Rowan Seymour",
    "type": "set_contact_name",
    "uuid": "477ac8b4-25e2-483a-8686-2d1332c4da1c",
  },
  [Function],
]
`;

exports[`UpdateContactForm updates should update field value 1`] = `
Object {
  "channel": Object {
    "value": null,
  },
  "field": Object {
    "value": Object {
      "id": "birthday",
      "name": "Birthday",
      "type": "field",
    },
  },
  "fieldValue": Object {
    "validationFailures": Array [],
    "value": "12/25/00",
  },
  "language": Object {
    "value": null,
  },
  "name": Object {
    "value": "",
  },
  "type": "set_contact_field",
  "valid": true,
}
`;

exports[`UpdateContactForm updates should update field value 2`] = `
Array [
  Object {
    "name": "Rowan Seymour",
    "type": "set_contact_name",
    "uuid": "477ac8b4-25e2-483a-8686-2d1332c4da1c",
  },
  [Function],
]
`;

exports[`UpdateContactForm updates should update language 1`] = `
Object {
  "channel": Object {
    "value": null,
  },
  "field": Object {
    "value": Object {
      "id": "language",
      "name": "Language",
      "type": "property",
    },
  },
  "fieldValue": Object {
    "value": "25",
  },
  "language": Object {
    "validationFailures": Array [],
    "value": "e",
  },
  "name": Object {
    "value": "",
  },
  "type": "set_contact_language",
  "valid": true,
}
`;

exports[`UpdateContactForm updates should update language 2`] = `
Array [
  Object {
    "name": "Rowan Seymour",
    "type": "set_contact_name",
    "uuid": "477ac8b4-25e2-483a-8686-2d1332c4da1c",
  },
  [Function],
]
`;

exports[`UpdateContactForm updates should update name 1`] = `
Object {
  "channel": Object {
    "value": null,
  },
  "field": Object {
    "value": Object {
      "id": "name",
      "name": "Name",
      "type": "property",
    },
  },
  "fieldValue": Object {
    "validationFailures": Array [],
    "value": "",
  },
  "language": Object {
    "value": null,
  },
  "name": Object {
    "value": "Rowan Seymour",
  },
  "type": "set_contact_name",
  "valid": true,
}
`;

exports[`UpdateContactForm updates should update name 2`] = `
Array [
  Object {
    "name": "Rowan Seymour",
    "type": "set_contact_name",
    "uuid": "477ac8b4-25e2-483a-8686-2d1332c4da1c",
  },
  [Function],
]
`;

exports[`UpdateContactForm updates should validate before saving 1`] = `
Object {
  "channel": Object {
    "validationFailures": Array [
      Object {
        "message": "Channel is required",
      },
    ],
    "value": null,
  },
  "field": Object {
    "value": Object {
      "id": "channel",
      "name": "Channel",
      "type": "property",
    },
  },
  "fieldValue": Object {
    "value": "25",
  },
  "language": Object {
    "value": null,
  },
  "name": Object {
    "value": "",
  },
  "type": "set_contact_channel",
  "valid": false,
}
`;
